# make-SHMR-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml  stellarHaloMassRelation_Behroozi2010.hdf5
data/observations/trinity/: README.md  fig14_median_BHHM_fit_z0-10.txt  trinity_bhmr.hdf5
data/observations/vanderwel2014/: README.md  vanderwel2014_mass_size.hdf5
data/simulations/universemachine/: universemachine_downloaded.hdf5
data/theory/behroozi2010/: behroozi2010_parametric.hdf5
data/theory/behroozi2013/: behroozi2013_z0_central.h5  behroozi2013_z0_central.yaml  behroozi2013_z0_galacticus.h5
data/theory/moster2013/: moster2013_z0_central.hdf5  moster2013_z0_central.yaml  moster2013_z0_galacticus.hdf5
docs/: BHMR_IMPLEMENTATION.md  data_format.md
notebooks/: data_provenance_example.ipynb
scripts/: README.md  calculate_template.py  create_behroozi2010_parametric.py  create_trinity_bhmr.py  create_universemachine_downloaded.py  create_vanderwel2014_mass_size.py  download_template.py  plot_shmr_comparison.py  validate.py  validate_old.py
src/shmr_datasets/: __init__.py  data_format.py  io.py  io_old.py  utils.py
tests/: test_basic.py
